# gacha_builder

./: .gitignore  Cargo.toml  GachaConf.toml.example
gacha_front/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
gacha_front/src/: App.vue  main.ts  store.ts
gacha_front/src/components/: Home.vue  LoginWithDiscord.vue
migrations/2024-01-11-140041_create_user_tables/: down.sql  up.sql
src/: auth.rs  config.rs  main.rs  schema.rs  session.rs
src/data/: discord.rs  mod.rs  users.rs
src/session/: mod.rs  storage.rs
